# crew-ai-example

./: .gitignore  01_quickstart.py  02_tool_definition.py  03_tool_execution.py  04_tool_error_handling.py  05_hitl_task_input.py  06_hitl_flow_feedback.py  07_durable_basic.py  08_durable_resume.py  09_collaboration_delegation.py  10_collaboration_hierarchical.py  11_memory_basic.py  12_memory_longterm.py  13_production_concerns.py  README.md  REPORT.md  REPORT_ja.md  pyproject.toml
