[project]
name = "crew-ai-example"
version = "0.1.0"
description = "CrewAI verification project for production readiness assessment"
requires-python = ">=3.12"

dependencies = [
    "crewai>=0.100.0",
    "crewai-tools>=0.20.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.hatch.build]
exclude = [
    "*.py",
]
